<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname "WorkCatalog">]>


<resources>
    <string name="app_name">&appname;</string>
    <string name="facebook_app_id">435283173479735</string>
    <string name="loading">Loading...</string>
    <string name="camera">Camera</string>
    <string name="select">selectall</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign-in</string>
    <string name="welcome_to_workcatalog">Welcome to &appname;.</string>
    <string name="welcome_terms_privacy_message">Clicking on Continue, Create Account or Other Options, you accept our Terms, Privacy and Policy Rules.</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="create_an_account">Create an account</string>
    <string name="other_options">Other options</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="show">Show</string>
    <string name="next">Next</string>
    <string name="hide">Hide</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="insert_your_e_mail_and_find_your_account">Insert your e-mail and find your account.</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="add_your_e_mail_address">Add your e-mail address</string>
    <string name="create_a_password">Create a password</string>
    <string name="your_password_should_be_atleast_8_caracters_long_dont_use_easy_passwords_repetitions_or_logic_sequences_try_to_make_it_longer_and_add_some_special_symbols_like_or">Your password should be atleast 8 characters long. Dont use easy passwords, repetitions or logic sequences. Try to make it longer and add some special symbols like !, # or %</string>
    <string name="action_cancelled">Action cancelled</string>
    <string name="recent">Recent</string>
    <string name="locations">LOCATIONS</string>
    <string name="landing">MY WORKS</string>
    <string name="tab_landing_title">MY WORKS</string>
    <string name="tab_user_profile_title">PROFILE</string>
    <string name="tab_mapping_title">CONFIGURATION</string>
    <string name="sorry_there_is_no_data_to_show_at_this_moment">SORRY, THERE IS NO DATA TO SHOW AT THIS MOMENT.</string>
    <string name="title">Title</string>
    <string name="select_label_example">Add label name (i.e. color)</string>
    <string name="add_value_to_your_label_i_e_cup_red_etc">Add value to your label (i.e. red)</string>
    <string name="add">Add</string>
    <string name="attach_file">Attach file</string>
    <string name="delete">Delete</string>
    <string name="attach_image">Attach image</string>
    <string name="save">Save</string>
    <string name="progress_uploading">Uploading..</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_failure">Upload failed</string>
    <string name="give_a_name_to_this_mapping">Give a name to this mapping</string>
    <string name="modify">Modify</string>
    <string name="cancel">Cancel</string>
    <string name="foreground">Foreground</string>
    <string name="other">Other</string>
    <string name="most_viewed">Most viewed</string>
    <string name="interesting">Interesting</string>
    <string name="months">This month</string>

</resources>
