<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.rb.workcatalog.fragments.auth.WelcomeFragment"
    android:background="@drawable/auth_background"
    android:orientation="vertical"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageButton
            android:id="@+id/welcome_close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/welcome_sign_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:text="@string/sign_in"
            android:gravity="end|center_vertical"
            android:textAllCaps="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:text="@string/welcome_to_workcatalog"
            android:textAllCaps="false"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/welcome_continue_with_fb_btn"
                android:text="@string/continue_with_facebook"
                android:textColor="@color/authColorBackground"
                android:textSize="20sp"
                android:textAllCaps="false"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/welcome_create_acc_btn"
                android:text="@string/create_an_account"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textAllCaps="false"/>


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/welcome_other_option_btn"
                android:text="@string/other_options"
                android:textColor="@android:color/white"
                android:background="@android:color/transparent"
                android:textSize="20sp"
                android:textAllCaps="false"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:text="@string/welcome_terms_privacy_message"
            android:textAllCaps="false"
            />
    </LinearLayout>

</LinearLayout>
