<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rb.workcatalog.fragments.tabs.CreateMappingFragment"
    android:clickable="true"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:id="@+id/mapp_header"
        android:background="@color/authColorBackground"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_btn"
            android:drawableStart="@android:drawable/ic_media_previous"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/saveCfgBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />


    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/mapp_header"
            >


            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/give_a_name_to_this_mapping" />

            <EditText
                android:id="@+id/mappingNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/labelPrompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_label_example" />

            <EditText
                android:id="@+id/labelET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/addCfgBtn"
                    android:layout_below="@+id/include"
                    android:text="@string/add"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/cfg_listView"
                />

        </LinearLayout>

</RelativeLayout>
