<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.rb.workcatalog.fragments.auth.CreateAccountPasswordFragment"
    android:background="@drawable/auth_background"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageButton
            android:id="@+id/create_close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:text="@string/create_a_password" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/your_password_should_be_atleast_8_caracters_long_dont_use_easy_passwords_repetitions_or_logic_sequences_try_to_make_it_longer_and_add_some_special_symbols_like_or" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/password"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/create_password_show_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:gravity="end|center_vertical"
                android:background="@android:color/transparent"
                android:text="@string/show"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/create_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:backgroundTint="@color/authColorBackgroundLight"
            android:textCursorDrawable="@color/authColorBackgroundLight"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/create_next_btn"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="end"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:enabled="true"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:background="@drawable/next_button_background" />
</LinearLayout>
