<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.rb.workcatalog.fragments.auth.OtherOptionFragment"
    android:background="@drawable/auth_background"
    android:orientation="vertical"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageButton
            android:id="@+id/option_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="15dp">


        <Button
            android:id="@+id/option_facebook_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:textAllCaps="false"
            android:textColor="@color/authColorBackground"
            android:background="@android:color/white"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/option_google_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="@color/authColorBackground"
            android:background="@android:color/white"
            android:textSize="20sp" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/option_create_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/authColorBackground"
            android:text="@string/create_an_account"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


    </LinearLayout>
</LinearLayout>
