<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.rb.workcatalog.fragments.auth.CreateAccountNameFragment"
    android:background="@drawable/auth_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageButton
            android:id="@+id/create_close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:text="@string/what_s_your_name" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/name" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/create_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:backgroundTint="@color/authColorBackgroundLight"
            android:textCursorDrawable="@color/authColorBackgroundLight"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1" />



            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/surname"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/create_surname_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:backgroundTint="@color/authColorBackgroundLight"
            android:textCursorDrawable="@color/authColorBackgroundLight"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/create_next_btn"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="end"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:enabled="true"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:background="@drawable/next_button_background" />



</LinearLayout>
